--- a/front/templates/base.html
+++ b/front/templates/base.html
@@ -6,7 +6,7 @@
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
-<body>
+<body class="d-flex flex-column">
 <header>
     <nav class="navar">
         <div class="bg-blue p-3 mb-2 d-flex justify-content-between align-items-center">
@@ -28,8 +28,21 @@
 {% block content %}
 {% endblock %}
 
-<footer>
-
+<footer class="mt-auto">
+    {% block footer %}
+    {% endblock %}
 </footer>
+
+<script
+  src="https://code.jquery.com/jquery-3.7.1.js"
+  integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+  crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+
+
+<script src="/forum/static/js/addComment.js"></script>
+<script src="/forum/static/js/refresh.js"></script>
+
+
 </body>
 </html>
