--- a/front/templates/base.html
+++ b/front/templates/base.html
@@ -13,10 +13,11 @@
             <h1 style="color: black" class="d-block">Forum by Alex</h1>
             <div class="action-buttons">
 
-                <a href="{{ url_for('index') }}" class="btn btn-info">
+<!--                <a href="{{ url_for('index') }}" class="btn btn-info">-->
+                <a href="/forum" class="btn btn-info">
                     <span>Главная</span>
                 </a>
-                <a href="{{ url_for('thread_create') }}" class="btn btn-success">
+                <a href="/forum/thread/create" class="btn btn-success">
                     <span>Создать тред</span>
                 </a>
             </div>
