--- a/front/templates/macroses.html
+++ b/front/templates/macroses.html
@@ -10,7 +10,7 @@
         <p class="card-text">{{ thread.text }}</p>
         {% if request.url != url_for('thread', id=thread.id) %}
 <!--        <a href="{{ url_for('thread', id=thread.id) }}" class="btn btn-primary">Ответить</a>-->
-        <a href="/forum/thread/{{ thread.id }}" class="btn btn-primary">Ответить</a>
+        <a href="/forum/{{ thread.id }}" class="btn btn-primary">Ответить</a>
         {% endif %}
     </div>
 </div>
