Поправил докер файл

--- a/app/front/templates/thread.html
+++ b/app/front/templates/thread.html
@@ -24,7 +24,7 @@
 
 
 
-    <div class=" d-flex justify-content-around">
+    <div class=" d-flex justify-content-around mb-5">
         <form class="w-50" action="" method="post" id="add_comment">
             <input type="text" value="{{ thread.id }}" hidden name="thread_id">
             <div class="input-group mb-3">
