--- a/app/front/templates/base.html
+++ b/app/front/templates/base.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Forum by Alex</title>
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="//vjs.zencdn.net/8.18.1/video-js.min.css" rel="stylesheet">
+
+    <link href="/forum/static/js/lightbox2/dist/css/lightbox.css" rel="stylesheet"/>
+
+
 </head>
 <body class="d-flex flex-column">
 <header>
@@ -13,7 +18,7 @@
             <h1 style="color: black" class="d-block">Forum by Alex</h1>
             <div class="action-buttons">
 
-<!--                <a href="{{ url_for('index') }}" class="btn btn-info">-->
+                <!--                <a href="{{ url_for('index') }}" class="btn btn-info">-->
                 <a href="/forum" class="btn btn-info">
                     <span>Главная</span>
                 </a>
@@ -34,17 +39,18 @@
     {% endblock %}
 </footer>
 
-<script
-  src="https://code.jquery.com/jquery-3.7.1.js"
-  integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-  crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 
+<script src="//vjs.zencdn.net/8.18.1/video.min.js"></script>
 
+<script src="/forum/static/js/jquery-3.7.1.min.js"></script>
+<script src="/forum/static/js/moment.min.js"></script>
 
-    <script src="/forum/static/js/addComment.js"></script>
-    <script src="/forum/static/js/addFileInForm.js"></script>
-    <script src="/forum/static/js/refresh.js"></script>
+<script src="/forum/static/js/main.js"></script>
+<script src="/forum/static/js/addFileInForm.js"></script>
+{#<script src="/forum/static/js/addComment.js"></script>#}
+{#<script src="/forum/static/js/refresh.js"></script>#}
+
+<script src="/forum/static/js/lightbox2/dist/js/lightbox.js"></script>
 
 
 </body>
